# chinapost-internship

./: .gitignore  README.md  README_CN.md
Whisper-main/: README.md  main.py
week2/post-service-agent/: .dockerignore  .env.example  Dockerfile  QUICKSTART.md  README.md  RUNBOOK.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  start_services.sh
week2/post-service-agent/apps/: __init__.py
week2/post-service-agent/config/: __init__.py  asgi.py  post_ai.yaml  settings.py  urls.py  wsgi.py
week2/post-service-agent/docs/: README.md  RUNBOOK.md  security.md  settings-configs.md
week2/post-service-agent/post_ai/: __init__.py  build_faiss.py  config.py  embeddings.py  env.py  filter_mapping.py  old_embeddings.py  pipeline.py  policy_embeddings.py  prompts.py  retrieval.py  schemas.py  source_loader.py  tickets.py
week2/post-service-agent/templates/: base.html
week3/mlx_qwen_sft/: QUICKSTART.md  README.md  pyproject.toml  requirements.txt  train_3b_tmux.sh  train_7b_tmux.sh
week3/mlx_qwen_sft/configs/: qwen2.5-3b-lora.yaml  qwen2.5-7b-lora.yaml
week3/mlx_qwen_sft/eval/: download_metadata.json  format_eval.jsonl  general_regression_eval.jsonl  postal_domain_eval.jsonl  safety_eval.jsonl
week3/mlx_qwen_sft/global_compare/: build_global_compare.py  global_compare_report.md  global_rank_summary.csv
week3/mlx_qwen_sft/scripts/: chat_with_adapter.py  download_eval_datasets.py  evaluate_model.py  organize_sft_data.py  plot_eval_metrics.py  plot_rank_comparison.py  prepare_mlx_data.py  report_eval_summary.py  run_rank_sweep.py  train_with_eval.py
(+316 files in other folders)
