[project]
name = "post-service-agent"
version = "0.1.0"
description = "Postal customer-service RAG assistant."
requires-python = ">=3.11"
dependencies = [
  "Django>=5",
  "faiss-cpu",
  "django-ninja>=1",
  "pydantic>=2",
  "psycopg[binary]>=3",
  "PyYAML>=6",
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["post_ai/tests"]
pythonpath = ["."]
addopts = "-q"
